--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,9 +12,18 @@
 
 @import "homeAdmin";
 
+@import "./posts/index";
+@import "./posts/show";
+@import "./posts/create";
+@import "./posts/edit";
+
 body {
     background-color: #e4eeff;
     font-family: "Roboto", sans-serif;
+}
+
+a:hover {
+    text-decoration: none;
 }
 
 ul {
