--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11103,6 +11103,21 @@ a.text-dark:focus {
   margin: 20px 30px 0px 30px;
 }
 
+.my-posts-container .my-div .my-actions {
+  display: flex;
+}
+
+.my-posts-container .my-div .my-actions a {
+  padding: 0 5px;
+}
+
+.my-posts-container .my-div .my-del-btn {
+  margin-left: 10px;
+  color: white;
+  background-color: crimson;
+  border: none;
+}
+
 .my-posts-container .my-line {
   border-bottom: 1px solid #0e7ee7;
   margin: 5px 30px;
