--- a/resources/sass/posts/index.scss
+++ b/resources/sass/posts/index.scss
@@ -28,6 +28,20 @@
         display: flex;
         justify-content: space-between;
         margin: 20px 30px 0px 30px;
+
+        .my-actions {
+            display: flex;
+            a {
+                padding: 0 5px;
+            }
+        }
+
+        .my-del-btn {
+            margin-left: 10px;
+            color: rgb(255, 255, 255);
+            background-color: crimson;
+            border: none;
+        }
     }
 
     .my-line {
