--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,7 +15,7 @@
 @import "./posts/index";
 @import "./posts/show";
 @import "./posts/create";
-@import "./posts/edit";
+/* @import "./posts/edit"; */
 
 body {
     background-color: #e4eeff;
