--- a/resources/sass/posts/create.scss
+++ b/resources/sass/posts/create.scss
@@ -24,6 +24,7 @@
             border: 2px solid rgb(14, 126, 231);
             border-radius: 5px;
             padding: 5px;
+            max-height: 400px;
         }
     }
 
