--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11203,8 +11203,10 @@ input,
 
 header {
   position: fixed;
-  width: 100%;
+  z-index: 10;
   top: 0;
+  left: 0;
+  width: 100%;
 }
 
 footer {
