--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -39,8 +39,10 @@ input,
 
 header {
     position: fixed;
-    width: 100%;
+    z-index: 10;
     top: 0;
+    left: 0;
+    width: 100%;
 }
 
 footer {
