adds category logics  & structures

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11076,10 +11076,7 @@ a.text-dark:focus {
 .my-posts-container {
   width: 1100px;
   height: 500px;
-  position: absolute;
-  top: 47%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  margin: 190px auto;
   overflow-y: auto;
   background-color: white;
   -o-box-shadow: 5px 5px 10px 0px #0e7ee7;
@@ -11138,10 +11135,7 @@ a.text-dark:focus {
 .my-form-cont {
   width: 800px;
   height: 500px;
-  position: absolute;
-  top: 47%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  margin: 140px auto 220px auto;
 }
 
 .my-form-cont form .my-title,
