--- a/resources/sass/posts/create.scss
+++ b/resources/sass/posts/create.scss
@@ -1,10 +1,7 @@
 .my-form-cont {
     width: 800px;
     height: 500px;
-    position: absolute;
-    top: 47%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin: 140px auto 220px auto;
 
     form {
         .my-title,
