--- a/resources/sass/posts/index.scss
+++ b/resources/sass/posts/index.scss
@@ -1,10 +1,7 @@
 .my-posts-container {
     width: 1100px;
     height: 500px;
-    position: absolute;
-    top: 47%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin: 190px auto;
     overflow-y: auto;
 
     background-color: white;
