--- a/resources/sass/posts/index.scss
+++ b/resources/sass/posts/index.scss
@@ -21,8 +21,9 @@
         }
     }
 
-    .my-div {
+    .my-actions-cont {
         display: flex;
+        align-items: center;
         justify-content: space-between;
         margin: 20px 30px 0px 30px;
 
