--- a/resources/sass/posts/show.scss
+++ b/resources/sass/posts/show.scss
@@ -1,11 +1,19 @@
 .my-post-structure {
+    height: 400px;
     margin-top: 30px;
+    padding: 0 120px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-direction: column;
-    align-items: center;
 
     .my-title-structure {
         margin-bottom: 15px;
+        text-align: center;
+    }
+
+    .my-footer-infos {
+        margin: 0 20px;
+        display: flex;
+        justify-content: space-between;
     }
 }
