--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,6 +15,8 @@
 @import "./posts/index";
 @import "./posts/show";
 @import "./posts/create";
+
+@import "./posts/tags";
 /* @import "./posts/edit"; */
 
 body {
