--- a/resources/sass/posts/show.scss
+++ b/resources/sass/posts/show.scss
@@ -1,19 +1,55 @@
-.my-post-structure {
-    height: 400px;
-    margin-top: 30px;
-    padding: 0 120px;
+.my-full-cont {
     display: flex;
-    justify-content: space-between;
-    flex-direction: column;
+    align-items: center;
+    .my-posts-container {
+        .my-post-structure {
+            height: 400px;
+            margin-top: 30px;
+            padding: 0 120px;
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
 
-    .my-title-structure {
-        margin-bottom: 15px;
-        text-align: center;
+            .my-title-structure {
+                margin-bottom: 15px;
+                text-align: center;
+            }
+
+            .my-footer-infos {
+                margin: 0 20px;
+                display: flex;
+                justify-content: space-between;
+            }
+        }
+    }
+    .my-tags-section {
+        width: 200px;
+        background-color: white;
+        -webkit-box-shadow: -5px 5px 10px 0px rgb(14, 126, 231);
+        -moz-box-shadow: -5px 5px 10px 0px rgb(14, 126, 231);
+        -o-box-shadow: -5px 5px 10px 0px rgb(14, 126, 231);
+        box-shadow: -5px 5px 10px 2px rgb(14, 126, 231);
+        overflow-y: auto;
+
+        h5 {
+            text-align: center;
+            margin-top: 10px;
+            color: rgb(14, 126, 231);
+        }
+
+        ul {
+            padding: 5px 10px;
+            flex-direction: column;
+            justify-content: center;
+
+            li {
+                padding: 5px 0;
+                border-bottom: 1px solid rgb(14, 126, 231);
+            }
+        }
     }
 
-    .my-footer-infos {
-        margin: 0 20px;
-        display: flex;
-        justify-content: space-between;
+    .my-d-none {
+        display: none;
     }
 }
