--- a/resources/sass/posts/create.scss
+++ b/resources/sass/posts/create.scss
@@ -5,7 +5,8 @@
 
     form {
         .my-title,
-        .my-text {
+        .my-text,
+        .my-postImage {
             display: flex;
             flex-direction: column;
 
@@ -25,7 +26,7 @@
         }
 
         textarea {
-            max-height: 400px;
+            max-height: 280px;
             margin-bottom: 15px;
         }
     }
