--- a/resources/sass/posts/tags.scss
+++ b/resources/sass/posts/tags.scss
@@ -14,3 +14,12 @@
         background-color: rgb(14, 126, 231);
     }
 }
+
+.btn-group > .btn:focus,
+.btn-group > .btn:active,
+.btn-group > .btn.active,
+.btn-group-vertical > .btn:focus,
+.btn-group-vertical > .btn:active,
+.btn-group-vertical > .btn.active {
+    z-index: 0;
+}
