--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -19,6 +19,8 @@
 @import "./posts/tags";
 /* @import "./posts/edit"; */
 
+@import "./mails/newSiteContact.scss";
+
 body {
     background-color: #e4eeff;
     font-family: "Roboto", sans-serif;
